--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
                     </template>
                     <span>
                         <p><br> 1. 浏览进度和单词收藏夹仅保存在本地；
-                            <br> 2. 使用完毕后建议导出单词收藏夹，下次使用前再导入。
+                            <br> 2. 使用完毕后建议导出单词收藏夹，下次使用前再导入；
+                            <br> 3. 支持左右滑动或键盘切换单词，拼写模式下回车也可切换。
                         </p>
                     </span>
                 </v-tooltip>
@@ -232,8 +233,6 @@
                     </v-card-actions>
                 </v-card>
             </v-dialog>
-            <input @keyup.right="next_word">
-
             <!-- {{index_history}} -->
             </div>
     </v-app>
