--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 </head>
 
 <body>
-    <v-app id="app">
-        <div v-touch="{ left: () => next_word(), right: () => last_word()}">
+    <v-app id="app" v-touch="{ left: () => next_word(), right: () => last_word()}">
+        <div>
             <div class="toll_left">
                 <v-btn class="mx-2" fab dark color="light-blue lighten-2" @click="last_word">
                     上一个
@@ -179,7 +179,7 @@
                     <span>
                         <p>
                             <span v-for="(item,i) in update_log" :key="i">
-                                <br>{{item[0]}}: {{item[1]}}
+                                <br>{{item[0]}}: {{item[1]}} {{item[2]?"("+item[2]+")":""}}
                             </span>
                         </p>
                     </span>
@@ -5682,9 +5682,9 @@
                 panel: [0, 1, 2],
                 update_log: [
                     ["v1.0", "完成基本功能", "10.27"],
-                    ["v1.1", "保存单词浏览记录", "10.27"],
-                    ["v1.2", "增加单词收藏功能", "10.27"],
-                    ["v1.3", "导入导出收藏夹", "10.27"],
+                    ["v1.1", "保存单词浏览记录", ""],
+                    ["v1.2", "增加单词收藏功能", ""],
+                    ["v1.3", "导入导出收藏夹", ""],
                     ["v1.4", "增加键盘和手势互动", "10.28"],
                 ]
             }
