--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
             bottom: 0;
             color: #879298;
             z-index: 100;
-
-
         }
     </style>
 
@@ -111,7 +109,7 @@
                 </v-btn>
             </div>
             <div class="toll_center">
-                <v-btn color="purple lighten-3" large dark v-if="Contains(collection,index)>=0" @click="uncollect_word">
+                <v-btn color="purple lighten-3" large dark v-if="collection.indexOf(index)>-1" @click="uncollect_word">
                     <v-icon>mdi-star</v-icon>已收藏
                 </v-btn>
                 <v-btn large v-else @click="collect_word">
@@ -124,28 +122,41 @@
                 </v-btn>
             </div>
 
-            <div style="margin-top:0.1rem;color: #879298;">{{index+1}}/{{glossary.length}}<span style="float:right">P{{glossary[index].page}}</span>
+            <div style="margin-top:0.1rem;color: #879298;">{{index+1}}/{{glossary.length}}
+
+                <span style="position: fixed;left:20%;right:20%;text-align:center;z-index:10;white-space:nowrap;">
+                    <v-autocomplete v-show="show_search" v-model="search_text" auto-select-first label="搜索" :items="this.glossary_words.concat(this.glossary_words_CN)"></v-autocomplete>
+                </span>
+
+                <span style="float:right">P{{glossary[index].page}}</span>
                 <!-- <v-btn icon v-if="Contains(collection,index)>=0" style="color:gold" @click="uncollect_word">
                                         <v-icon>mdi-star</v-icon>
                                     </v-btn>
                                     <v-btn icon v-else @click="collect_word">
                                         <v-icon>mdi-star</v-icon>
                                     </v-btn> -->
+                <v-btn icon v-show="!show_search" @click="show_search=true">
+                    <v-icon>mdi-arrow-down</v-icon>
+                </v-btn>
+                <v-btn icon v-show="show_search" @click="show_search=false">
+                    <v-icon>mdi-arrow-up</v-icon>
+                </v-btn>
             </div>
 
             <v-content id="content">
-                <div class="ce" style="margin-top:1.6rem;"><span class="ce_title">
-                        <div>
-                            <div v-show="!show_spell" class="">
-                                {{glossary[index].word}}
-                            </div>
-                            <div v-show="show_spell" style="margin-left:10%;margin-right:10%;">
-                                <v-text-field id="input" type="text" v-model="spell_text" label="拼写" :success="spell_success" @keyup.enter="next_word">
-                            </div>
-
+                <div v-show="!show_spell" class="ce" style="margin-top:0.5rem;">
+                    <span class="ce_title">
+                        {{glossary[index].word}}
+                    </span>
+                </div>
+                <div v-show="show_spell" class="ce" style="margin-top:1.6rem;">
+                    <span class="ce_title">
+                        <div v-show="show_spell" style="margin-left:10%;margin-right:10%;">
+                            <v-text-field id="input" type="text" v-model="spell_text" label="拼写" :success="spell_success" @keyup.enter="next_word">
                         </div>
                     </span>
                 </div>
+
                 <div style="margin-top:0.5rem;" class="ce_subtitle">
                     <v-btn color="purple lighten-2" text @click="show_spell = !show_spell">{{show_spell?"拼写模式":"背词模式"}}
                     </v-btn>
@@ -154,16 +165,9 @@
                     <v-btn :color="show_collection?'amber':'purple lighten-2'" text @click="show_collection = !show_collection">{{show_collection?"只看收藏":"全部单词"}}
                     </v-btn>
                 </div>
-
-                <!-- <div style="margin-top:1rem;" class="ce_button">
-                    <v-btn color="#6539D6" outlined @click="show_spell = !show_spell">{{show_spell?"拼写模式":"背词模式"}}</v-btn>
-                    <v-btn color="#6539D6" outlined @click="show_context_CN = !show_context_CN">中文解释</v-btn>
-                    <v-btn color="#6539D6" outlined @click="show_context_EN = !show_context_EN">英文解释</v-btn>
-                </div> -->
                 <div style="margin-top:0.5rem;margin-left:10%;margin-right:10%;">
 
                     <v-expansion-panels accordion multiple v-model="panel" style="margin-top:0.5rem">
-
                         <v-expansion-panel>
                             <v-expansion-panel-header>
                                 中文翻译</v-expansion-panel-header>
@@ -185,11 +189,9 @@
                                 {{glossary[index].context_CN}}
                             </v-expansion-panel-content>
                         </v-expansion-panel>
-
                     </v-expansion-panels>
 
-                    <div>
-                        <!-- {{index_history}} -->
+                    <!-- {{index_history}} -->
             </v-content>
             <div class="copyright">
                 <v-tooltip top>
@@ -217,6 +219,7 @@
                         <p><br> 1. 浏览进度和单词收藏夹仅保存在本地；
                             <br> 2. 使用完毕后建议导出单词收藏夹，下次使用前再导入；
                             <br> 3. 支持左右滑动或键盘切换单词，拼写模式下回车也可切换。
+                            <br> 4. 点击顶部箭头可以显示搜索框，再次点击收回
                         </p>
                     </span>
                 </v-tooltip>
@@ -280,7 +283,7 @@
         },
         {
             "word": "binary",
-            "word_CN": "二元",
+            "word_CN": "二元；二进制的",
             "page": 19,
             "context": "The representation of data using two states, such as off-on or 1-0.",
             "context_CN": "使用两种状态表示数据（例如，关-开或1-0）。"
@@ -331,8 +334,8 @@
             "word": "file format",
             "word_CN": "文件格式",
             "page": 20,
-            "context": "The method of organization used to encode and store data in a computer. Text formats include DOCX and TXT. graphics formats include BMP, TIFF, gIF, and PNg.",
-            "context_CN": "用于在计算机中编码和存储数据的组织方法。文本格式包括DOCX和TXT。图形格式包括BMP，TIFF，gIF和PNg。"
+            "context": "The method of organization used to encode and store data in a computer. Text formats include DOCX and TXT. graphics formats include BMP, TIFF, GIF, and PNG.",
+            "context_CN": "用于在计算机中编码和存储数据的组织方法。文本格式包括DOCX和TXT。图形格式包括BMP，TIFF，GIF和PNG。"
         },
         {
             "word": "file name extension",
@@ -5684,6 +5687,10 @@
         data() {
             return {
                 glossary: glossary,
+                glossary_words: [],
+                glossary_words_CN: [],
+                search_text: "",
+                show_search: false,
                 index: -1,
                 quantity: 10,
                 show_word_CN: true,
@@ -5708,6 +5715,7 @@
                     ["v1.2", "增加单词收藏功能", ""],
                     ["v1.3", "导入导出收藏夹", ""],
                     ["v1.4", "增加键盘和手势互动", "10.28"],
+                    ["v1.5", "增加搜索框", "10.29"],
                 ]
             }
         },
@@ -5717,7 +5725,7 @@
                 const original_index = this.index;
                 this.spell_success = false;
                 if (this.show_collection) {
-                    var collection_index = this.Contains(this.collection, this.index);
+                    var collection_index = this.collection.indexOf(this.index);
                     if (this.random)
                         collection_index = Math.floor((Math.random() * this.collection.length))
                     else
@@ -5811,6 +5819,7 @@
                 this.index_history.push(this.index);
                 this.spell_text = "";
                 localStorage.setItem("index", this.index);
+                this.search_text = "";
             },
             collection() {
                 localStorage.setItem("collection", JSON.stringify(this.collection));
@@ -5818,6 +5827,16 @@
             },
             index_history() {
                 localStorage.setItem("index_history", JSON.stringify(this.index_history))
+            },
+            search_text() {
+                // console.log(this.search_text);
+                if (!this.search_text) return;
+                var index = this.search_text.indexOf(".");
+                if (index) {
+                    this.index = Number(this.search_text.substring(0, index)) - 1;
+                    // this.search_text = "";
+                }
+
             }
         },
         mounted: function () {
@@ -5843,6 +5862,14 @@
                     }
                 }
             }, 1000);
+            console.log(this.glossary_words);
+
+            glossary.forEach((e, index) => {
+                var word = (index + 1) + ". [" + e.word + "] " + e.word_CN; // + " P"+ e.page
+                this.glossary_words.push(word);
+                // this.glossary_words_CN.push(e.word_CN);
+            });
+
 
         },
         created: function () {
